# GLAM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
glam/: __init__.py  description.rst  logs.py  types.py
glam/interface/: geocoder.py
glam/matching/: base_matcher.py  matched_address.py  matchers.py
glam/matching/embedding/: embedding_matcher.py  model.pth  model.py  predict.py  vocab.csv
glam/matching/fuzzy/: fuzzy_matcher.py  predict.py
glam/matching/hybrid_fuzzy/: hybrid_fuzzy_matcher.py  predict.py
glam/matching/hybrid_tfidf/: hybrid_tfidf_matcher.py  predict.py
glam/matching/tfidf/: predict.py  tfidf_matcher.py
glam/matching/vector/: model.py  predict.py  vector_matcher.py  vectors.py
glam/parsing/: base_parser.py  parsed_address.py  parsers.py  postprocessing.py
glam/parsing/libpostal/: postal_parser.py
glam/parsing/rnn/: dataset.py  inference.py  model.pth  model.py  rnn_parser.py  training.py
glam/preprocessing/: cleaners.py  preprocessor.py
glam/utils/: lookups.py  utils.py
tests/: test_geocoder.py  test_utils.py
tests/test_deps/: nz-street-address.csv
